--- a/src/CourseTool/packages.config
+++ b/src/CourseTool/packages.config
@@ -22,15 +22,15 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.7.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.7.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.7.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0-preview2-final" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0-preview2-final" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0-preview2-final" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0-preview2-final" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Primitives" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
@@ -45,7 +45,7 @@
   <package id="System.Buffers" version="4.4.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
-  <package id="System.Collections.Immutable" version="1.5.0-preview2-26406-04" targetFramework="net47" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net47" />
   <package id="System.Composition" version="1.0.31" targetFramework="net47" />
   <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net47" />
   <package id="System.Composition.Convention" version="1.0.31" targetFramework="net47" />
@@ -70,10 +70,11 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net47" />
-  <package id="System.Memory" version="4.5.0-preview2-26406-04" targetFramework="net47" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net47" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net47" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net47" />
@@ -82,7 +83,7 @@
   <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0-preview2-26406-04" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net47" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
