--- a/src/Database/packages.config
+++ b/src/Database/packages.config
@@ -24,7 +24,7 @@
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
-  <package id="System.Collections.Immutable" version="1.5.0-preview2-26406-04" targetFramework="net47" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net47" />
   <package id="System.Composition" version="1.0.31" targetFramework="net47" />
   <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net47" />
   <package id="System.Composition.Convention" version="1.0.31" targetFramework="net47" />
