--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -41,7 +41,7 @@
   <package id="Microsoft.AspNetCore.DataProtection.Extensions" version="2.0.2" targetFramework="net47" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.0.2" targetFramework="net47" />
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.0.2" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Html.Abstractions" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Html.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.0.2" targetFramework="net47" />
   <package id="Microsoft.AspNetCore.Http.Features" version="2.0.2" targetFramework="net47" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
@@ -58,9 +58,9 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.7.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.7.0" targetFramework="net47" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.3" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0-preview2-final" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0-preview2-final" targetFramework="net47" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net47" />
@@ -73,7 +73,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.1" targetFramework="net47" />
   <package id="Microsoft.Extensions.ObjectPool" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Options" version="2.0.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Primitives" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net47" />
@@ -116,8 +116,8 @@
   <package id="System.Buffers" version="4.4.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
-  <package id="System.Collections.Immutable" version="1.5.0-preview2-26406-04" targetFramework="net47" />
-  <package id="System.ComponentModel.Annotations" version="4.5.0-preview2-26406-04" targetFramework="net47" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net47" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net47" />
   <package id="System.Composition" version="1.0.31" targetFramework="net47" />
   <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net47" />
   <package id="System.Composition.Convention" version="1.0.31" targetFramework="net47" />
@@ -144,10 +144,11 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net47" />
-  <package id="System.Memory" version="4.5.0-preview2-26406-04" targetFramework="net47" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net47" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net47" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net47" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net47" />
@@ -155,7 +156,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0-preview2-26406-04" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net47" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
@@ -172,7 +173,7 @@
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net47" />
-  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net47" />
+  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net47" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net47" />
